team/output/BD_772_700_1404/338/2/0/op.txt
  File "/home/ubuntu/test-bigdata/adminmgr/media/code/A2/python/task/BD_772_700_1404_3_uUZohaD.py", line 16
    yield(n, currentrank/batsman_number)
        ^
IndentationError: expected an indented block
